Fix image alignment for aspect overlays

--- a/src/components/RandomizeResult.module.css
+++ b/src/components/RandomizeResult.module.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
-  object-position: right;
+  object-position: top right;
 }
 
 .aspect-overlay {
